--- a/aboutme.html
+++ b/aboutme.html
@@ -20,52 +20,86 @@
         <span><a href="#advice">Advice from me</a></span>
       </div>
       <div id="about">
-        <h2 id="scratch">Starting from Scratch</h2>
-        <p>
-          My emergence started in 2012 on <a href="//scratch.mit.edu/users/Zro716">Scratch</a>. I joined because I wanted to express myself through programming. I'll admit, sadly I was a memelord, and my first few projects were based on that. But over
-          time, I caught myself getting inspired to create useful projects - calculators, simulators, generators, thingamabobers... This became my true passion on Scratch. Of course I would still regress to the memelord within from time to time...
-          <br>In 2013, I was semi-permabanned from Scratch for reasons I will not disclose publicly. Months later I rejoined \"anew\" as <a href="//scratch.mit.edu/users/ProdigyZeta7/">ProdigyZeta7</a>, hoping I could return to my passion while cutting ties
-          to my former alias. I needed a long time to get away from my past, to let things heal up while I continued my work.
-          <br>A year and a half later, and more recognition than ever before, I started to question myself. Was it right to shy away? It didn't feel right to be someone different all this time. I already redeemed myself in the community; returning to my past
-          identity was a risk I was willing to take. After a monthlong campaign with the Scratch Team's front desk, I won my account back.
-          <br>Initially, I promised to use my account just for removing profane comments that piled up and close the story ASAP. Instead, I wanted to set things right. Too long I lied to everyone, saying that Zro716 was't me - I must've convinced so many
-          people that they refused to believe the opposite. Eventually, I proved to everyone of the truth and we all lived happily ever after blah blah blah.
-          <br>Okay, some people might still be doubtful. But enough of that, I'm finished with that chapter, and I have moved on to continue making amazing projects on Scratch.
-          <br>Time slipped by and I found myself losing the motivation to work. As I realized how limited Scratch was for my ambitions, I turned my attention to other activities. I was a frequent forum junkie, doing what I can to help when I didn't feel like
-          working on projects. I spend most of my time on <a href="//scratch.mit.edu/discuss/1/">Suggestions</a>, providing feedback for ideas and trying to counter shrewd arguments. I wrote many, many long posts to prove my point as well as inspire others
-          to value post quality over post quantity. Nowadays, having accumulated more than four thousand combined posts on my accounts, I seldom post anymore. In the latter days of my forum expidenture, I tried participating in <a href="//scratch.mit.edu/users/discuss/31/">Advanced Topics</a>.
-          I did win a few small 'challenges', but most of the time I was in over my head.
-          <br>Let me make this clear: I'm <i>not</i> through with Scratch yet. When I get enough free time and motivation, Scratch will be in its hayday...
-          <br> I joined a collaboration of Scratchers back in May 2015. I was reluctant at first, clinging to my lone-wolf programming style, but I convinced myself to join if it meant making some dream projects of mine come true. We were especially adamant
-          about a lot of decisions, like what the collab name should be, what projects we should make; we eventually came to be known as <a href="//scratch.mit.edu/users/Sum8s/">Sum8s</a> (it was my idea) and unfortunately, we didn't make much progress
-          from there. But behind the scenes, we were abuzz with discussion and brainstorming. Being in the collab was probably the best decision I ever made, despite the lack of work ethic, because I made some truly awesome friends.
-        </p>
-        <h2 id="soundcloud">Becoming a Song Writer</h2>
-        <p>
-          Little did I care about making music in the past. In middle school, I played the trumpet in band, tried out the school piano, and dawdled in this thing called Music Ace Maestro and the better-known Garageband. Truth is, I sucked at playing music. I quit
-          band when I was getting too many complaints about playing extra loud, and frankly I neglected to lube my trumpet's valves. I tried out composing music with MAM and Garageband, but my imagination was dry. What I was good at was identifying the
-          <i>feeling</i> of a song when played.
-          <br>The Scratcher collab I joined in 2015 rejuvenated my long lost love of music. One day I was introduced to this free software called <a href="//lmms.io">LMMS</a>. I didn't get much use out of it at first, because a music studio was quite foreign
-          to me. Experimentation was my specialty, and shortly after I produced <a href="https://soundcloud.com/zro-from-scratch/prodigy-z-ascension">my first song</a>. I know, it's pretty bare and not all that impressive. But it was the first time in
-          a long time that I could express myself musically. Ever since, I've been getting much better at songwriting, especially chord progression and capturing those "feelings" I got when listening to esteemed song artists.
-          <br> Most of my new songs were made using a web-based chiptune editor called <a href="//beepbox.co">Beepbox</a>. I fell in love with this thing pretty fast. My collab friends and I enjoy sharing our sketches with each other, some of them we've published
+        <div id="scratch">
+          <h2>Starting from Scratch</h2>
+          <p>
+            My emergence started in 2012 on <a href="//scratch.mit.edu/users/Zro716">Scratch</a>. I joined because I wanted to express myself through programming. I'll admit, sadly I was a memelord, and my first few projects were based on that. But over
+            time, I caught myself getting inspired to create useful projects - calculators, simulators, generators, thingamabobers... This became my true passion on Scratch. Of course I would still regress to the memelord within from time to time...
+          </p>
+          <p>
+            In 2013, I was semi-permabanned from Scratch for reasons I will not disclose publicly. Months later I rejoined \"anew\" as <a href="//scratch.mit.edu/users/ProdigyZeta7/">ProdigyZeta7</a>, hoping I could return to my passion while cutting
+            ties to my former alias. I needed a long time to get away from my past, to let things heal up while I continued my work.
+          </p>
+          <p>
+            A year and a half later, and more recognition than ever before, I started to question myself. Was it right to shy away? It didn't feel right to be someone different all this time. I already redeemed myself in the community; returning to my past identity
+            was a risk I was willing to take. After a monthlong campaign with the Scratch Team's front desk, I won my account back.
+          </p>
+          <p>
+            Initially, I promised to use my account just for removing profane comments that piled up and close the story ASAP. Instead, I wanted to set things right. Too long I lied to everyone, saying that Zro716 was't me - I must've convinced so many people that
+            they refused to believe the opposite. Eventually, I proved to everyone of the truth and we all lived happily ever after blah blah blah.
+          </p>
+          <p>
+            Okay, some people might still be doubtful. But enough of that, I'm finished with that chapter, and I have moved on to continue making amazing projects on Scratch.
+          </p>
+          <p>
+            Time slipped by and I found myself losing the motivation to work. As I realized how limited Scratch was for my ambitions, I turned my attention to other activities. I was a frequent forum junkie, doing what I can to help when I didn't feel like working
+            on projects. I spend most of my time on <a href="//scratch.mit.edu/discuss/1/">Suggestions</a>, providing feedback for ideas and trying to counter shrewd arguments. I wrote many, many long posts to prove my point as well as inspire
+            others to value post quality over post quantity. Nowadays, having accumulated more than four thousand combined posts on my accounts, I seldom post anymore. In the latter days of my forum expidenture, I tried participating in <a href="//scratch.mit.edu/users/discuss/31/">Advanced Topics</a>.
+            I did win a few small 'challenges', but most of the time I was in over my head.
+          </p>
+          <p>
+            Let me make this clear: I'm <i>not</i> through with Scratch yet. When I get enough free time and motivation, Scratch will be in its hayday...
+          </p>
+          <p>
+            I joined a collaboration of Scratchers back in May 2015. I was reluctant at first, clinging to my lone-wolf programming style, but I convinced myself to join if it meant making some dream projects of mine come true. We were especially adamant about a
+            lot of decisions, like what the collab name should be, what projects we should make; we eventually came to be known as <a href="//scratch.mit.edu/users/Sum8s/">Sum8s</a> (it was my idea) and unfortunately, we didn't make much progress
+            from there. But behind the scenes, we were abuzz with discussion and brainstorming. Being in the collab was probably the best decision I ever made, despite the lack of work ethic, because I made some truly awesome friends.
+          </p>
+        </div>
+        <div id="soundcloud">
+          <h2>Becoming a Song Writer</h2>
+          <p>
+            Little did I care about making music in the past. In middle school, I played the trumpet in band, tried out the school piano, and dawdled in this thing called Music Ace Maestro and the better-known Garageband. Truth is, I sucked at playing music. I quit
+            band when I was getting too many complaints about playing extra loud, and frankly I neglected to lube my trumpet's valves. I tried out composing music with MAM and Garageband, but my imagination was dry. What I was good at was identifying
+            the
+            <i>feeling</i> of a song when played.
+          </p>
+          <p>
+            The Scratcher collab I joined in 2015 rejuvenated my long lost love of music. One day I was introduced to this free software called <a href="//lmms.io">LMMS</a>. I didn't get much use out of it at first, because a music studio was quite foreign
+            to me. Experimentation was my specialty, and shortly after I produced <a href="https://soundcloud.com/zro-from-scratch/prodigy-z-ascension">my first song</a>. I know, it's pretty bare and not all that impressive. But it was the first time
+            in a long time that I could express myself musically. Ever since, I've been getting much better at songwriting, especially chord progression and capturing those "feelings" I got when listening to esteemed song artists.
+          </p>
+          Most of my new songs were made using a web-based chiptune editor called <a href="//beepbox.co">Beepbox</a>. I fell in love with this thing pretty fast. My collab friends and I enjoy sharing our sketches with each other, some of them we've published
           on SoundCloud. Occassionally, in the late of night I'll be enraptured by the urge to make a song that is buzzing in my head so clearly, without any apparent source, so Beepbox becomes my prime medium for expressing those ideas.
-        </p>
-        <h2 id="programming">Hardcore Programmer</h2>
-        <p>
-          Everyday, I'm writing code. It could be for working with Scratch's API, or a secret program, or some other third thing. Nearly all of my programming is as a hobby, but it is my passion nonetheless.
-          <br>I am majoring in Computer Science so one would expect me to learn a multitude of languages. As of now, I've formally learned Java, Ruby, C++, and Visual Basic; I'm fluent in JavaScript, but I have no formal education for it; and I'm somewhat
-          able to program in Batch and a couple esoteric languages. I've still got a long ways to go, so don't consider my current list as everything.
-          <br>I'm often asked: \"What's your programming language of choice?\" It's tough for me to decide because I like the simplicity of Scratch, the functionality of Java and C++, and the flexibility of Ruby and JavaScript. It's a trilemma that wholeheartedly
-          depends on what you want to do. Personally, I'd just say go for all of them: it's better to be prepared for anything than stick with the limitations of one.
-          <br>Most of my non-Scratch programming is in JavaScript, and you can find my work on <a href="//github.com/Zro617/">GitHub</a>. I work in short bursts, and often I have to fix syntactical errors more than adding to the code. But one thing is clear
-          to me: I don't like to import libraries - I prefer to write all the code by myself, from blank document to deployment.
-          <br>One thing I strive to achieve in my later life is a remake of <a href="https://en.wikipedia.org/wiki/Defender_%282002_video_game%29">Defender</a>, one of my most loved childhood games.
-        </p>
-        <h2 id="advice">Advice from me</h2>
-        <p>
-          Follow your dreams.
-        </p>
+          </p>
+        </div>
+        <div id="programming">
+          <h2>Hardcore Programmer</h2>
+          <p>
+            Everyday, I'm writing code. It could be for working with Scratch's API, or a secret program, or some other third thing. Nearly all of my programming is as a hobby, but it is my passion nonetheless.
+          </p>
+          <p>
+            I am majoring in Computer Science so one would expect me to learn a multitude of languages. As of now, I've formally learned Java, Ruby, C++, and Visual Basic; I'm fluent in JavaScript, but I have no formal education for it; and I'm somewhat able to program
+            in Batch and a couple esoteric languages. I've still got a long ways to go, so don't consider my current list as everything.
+          </p>
+          <p>
+            I'm often asked: \"What's your programming language of choice?\" It's tough for me to decide because I like the simplicity of Scratch, the functionality of Java and C++, and the flexibility of Ruby and JavaScript. It's a trilemma that wholeheartedly depends
+            on what you want to do. Personally, I'd just say go for all of them: it's better to be prepared for anything than stick with the limitations of one.
+          </p>
+          <p>
+            Most of my non-Scratch programming is in JavaScript, and you can find my work on <a href="//github.com/Zro617/">GitHub</a>. I work in short bursts, and often I have to fix syntactical errors more than adding to the code. But one thing is clear
+            to me: I don't like to import libraries - I prefer to write all the code by myself, from blank document to deployment.
+          </p>
+          <p>
+            One thing I strive to achieve in my later life is a remake of <a href="https://en.wikipedia.org/wiki/Defender_%282002_video_game%29">Defender</a>, one of my most loved childhood games. I'd love to start a collaboration with someone on it someday.
+          </p>
+        </div>
+        <div id="advice">
+          <h2>Advice from me</h2>
+          <p>
+            Follow your dreams.
+          </p>
+        </div>
       </div>
     </div>
     <footer>
