forgot the title

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,9 @@
     <header>
     </header>
     <div class="pagewrapper">
+      <div id="title">
+        <h1>About Me</h1>
+      </div>
       <div id="contents">
         <label>Contents</label>
         <span><a href="#scratch">Starting from Scratch</a></span>
