--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@ You can just call me Zach. I prefer to keep my whole name a secret. :P
 			</div>
 		</div>
 		<footer>
-			
+			<ul>
+    				<li>Copyright &copy; Zro617 | </li>
+    				<li><a href="//github.com/Zro617">GitHub</a> | </li>
+    				<li><a href="//scratch.mit.edu/users/Zro716">Scratch</a> | </li>
+    				<li><a href="//soundcloud.com/zro-from-scratch">SoundCloud</a> | </li>
+    				<li><a href="//plus.google.com/u/0/103893775840439999959">Google+</a> | </li>
+    				<li><a href="mailto:zropotato@gmail.com">Email</a></li>
+  			</ul>	
 		</footer>
 	</body>
 </html>
