--- a/aboutme.html
+++ b/aboutme.html
@@ -106,7 +106,15 @@
       </div>
     </div>
     <footer>
-    </footer>
+      <ul class="nodot">
+        <li class="ln">Copyright &copy; Zro617 | </li>
+        <li class="ln"><a href="//github.com/Zro617">GitHub</a> | </li>
+        <li class="ln"><a href="//scratch.mit.edu/users/Zro716">Scratch</a> | </li>
+        <li class="ln"><a href="//soundcloud.com/zro-from-scratch">SoundCloud</a> | </li>
+        <li class="ln"><a href="//plus.google.com/u/0/103893775840439999959">Google+</a> | </li>
+        <li class="ln"><a href="mailto:zropotato@gmail.com">Email</a></li>
+      </ul>
+    <footer>
   </body>
 
 </html>
