--- a/aboutme.html
+++ b/aboutme.html
@@ -114,7 +114,7 @@
         <li class="ln"><a href="//plus.google.com/u/0/103893775840439999959">Google+</a> | </li>
         <li class="ln"><a href="mailto:zropotato@gmail.com">Email</a></li>
       </ul>
-    <footer>
+    </footer>
   </body>
 
 </html>
