--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@ You can just call me Zach. I prefer to keep my whole name a secret. :P
 				<li class="ln"><a href="//plus.google.com/u/0/103893775840439999959">Google+</a> | </li>
 				<li class="ln"><a href="mailto:zropotato@gmail.com">Email</a></li>
 			</ul>
-		<footer>
+		</footer>
 	</body>
 </html>
