added placeholder header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 	</head>
 	<body>
 		<header>
-			
+			<ul class="nodot">
+				<li class="allcaps bold"><a href="//zro617.github.io">Home</a></li>
+				<li class="allcaps"><a href="//zro617.github/aboutme.html">About Me</a></li>
+				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder1</a></li>
+				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder2</a></li>
+				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder3</a></li>
+				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder4</a></li>
+			</ul>
 		</header>
 		<div class="pagewrapper">
 			<div id="intro">
-				<pre lang="javascript">alert("Hello world!");</pre>
+				<h1><code lang="javascript">alert("Hello world!");</code></h1>
 				<p>
 I go by many aliases around the Interwebs: Zro617, Zro716, ProdigyZeta7, Prodigy Z, Zro...
 You can just call me Zach. I prefer to keep my whole name a secret. :P
