--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<body>
 		<header>
 			<ul class="nodot">
-				<li class="allcaps bold"><a href="//zro617.github.io">Home</a></li>
-				<li class="allcaps"><a href="//zro617.github/aboutme.html">About Me</a></li>
+				<li class="allcaps bolded"><a href="//zro617.github.io">Home</a></li>
+				<li class="allcaps"><a href="//zro617.github.io/aboutme.html">About Me</a></li>
 				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder1</a></li>
 				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder2</a></li>
 				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder3</a></li>
