--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
 		<title>welcome home fam - Zro617's Website</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="src/css/zro.css"></link>
+		<script id="boilerplate" src="src/js/boilerplate.js"></script>
 	</head>
 	<body>
 		<header>
-			<ul class="nodot">
-				<li class="allcaps bolded"><a href="//zro617.github.io">Home</a></li>
-				<li class="allcaps"><a href="//zro617.github.io/aboutme.html">About Me</a></li>
-				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder1</a></li>
-				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder2</a></li>
-				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder3</a></li>
-				<li class="allcaps"><a href="//zro617.github.io/index.html">Placeholder4</a></li>
-			</ul>
+
 		</header>
 		<div class="pagewrapper">
 			<div id="intro">
@@ -27,14 +21,7 @@ You can just call me Zach. I prefer to keep my whole name a secret. :P
 			</div>
 		</div>
 		<footer>
-			<ul class="nodot">
-				<li class="ln">Copyright &copy; Zro617 | </li>
-				<li class="ln"><a href="//github.com/Zro617">GitHub</a> | </li>
-				<li class="ln"><a href="//scratch.mit.edu/users/Zro716">Scratch</a> | </li>
-				<li class="ln"><a href="//soundcloud.com/zro-from-scratch">SoundCloud</a> | </li>
-				<li class="ln"><a href="//plus.google.com/u/0/103893775840439999959">Google+</a> | </li>
-				<li class="ln"><a href="mailto:zropotato@gmail.com">Email</a></li>
-			</ul>
+
 		</footer>
 	</body>
 </html>
