--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
     <title>story time - Zro617's Website</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="src/css/zro.css"></link>
+    <script id="boilerplate" src="src/js/boilerplate.js"></script>
   </head>
 
   <body>
@@ -106,14 +107,6 @@
       </div>
     </div>
     <footer>
-      <ul class="nodot">
-        <li class="ln">Copyright &copy; Zro617 | </li>
-        <li class="ln"><a href="//github.com/Zro617">GitHub</a> | </li>
-        <li class="ln"><a href="//scratch.mit.edu/users/Zro716">Scratch</a> | </li>
-        <li class="ln"><a href="//soundcloud.com/zro-from-scratch">SoundCloud</a> | </li>
-        <li class="ln"><a href="//plus.google.com/u/0/103893775840439999959">Google+</a> | </li>
-        <li class="ln"><a href="mailto:zropotato@gmail.com">Email</a></li>
-      </ul>
     </footer>
   </body>
 
