--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<!-- u reading muh code? help me develop it @ https://github.com/Zro617/zro617.github.io -->
-		<title>welcome home fam - Zro617's Website</title>
+	<!-- you reading my code? help me develop it @ https://github.com/Zro617/zro617.github.io -->
+		<title>welcome home - Zro617's Website</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="src/css/zro.css"></link>
 	</head>
@@ -13,9 +13,11 @@
 		<div class="pagewrapper">
 			<div id="intro">
 				<h1><code lang="javascript">alert("Hello world!");</code></h1>
-				<p>
-I go by many aliases around the Interwebs: Zro617, Zro716, ProdigyZeta7, Prodigy Z, Zro...
-You can just call me Zach. I prefer to keep my whole name a secret. :P
+				<p>I go by many aliases around the Interwebs: Zro617, Zro716, ProdigyZeta7, Prodigy Z, Zro... the name's Zach, and I love computer programming.
+				</p>
+				<p>I program on Scratch, write code on GitHub, compose music on SoundCloud, and hang out on Google+. Check the footer for da links.
+				</p>
+				<p>So hi.
 				</p>
 			</div>
 		</div>
