--- a/projects/index.html
+++ b/projects/index.html
@@ -19,17 +19,40 @@
         <p>I've been through a lot on Scratch and beyond. In the 3+ years of improving my programming skills, I'm proud to have made these awesome things.</p>
         <ul id="scratch">
         </ul>
-        <p>And yeah, I've been busy with working on programs outside of Scratch. Check these out:
+        <p>And yeah, I've been busy with working on programs that aren't programmed in Scratch. I still am. Check these out:
         <ul id="other">
+          <li>
+            <a href="scratch-ae-purifier.html">Purity</a>
+            <span class="description">
+              Helps remove your Scratch projects from "Add Everything" studios</span>
+          </li>
+          <li>
+            <a href="scratch-supporters.html">Census</a>
+            <span class="description">
+              Crude topic crawler for Scratch that generates a list of supporters, non-supporters, and the undecided. Useful on Suggestions.
+            </span>
+          </li>
         </ul>
-        <p>In case you don't know, I'm also a self-taught musician, I guess. Listen to these:
+        <p>In case you don't know, I'm also a <a href="//soundcloud.com/zro-from-scratch">self-taught musician</a>, I guess. Listen to these:
         <ul id="music">
+          <li>
+            <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/251781163&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+          </li>
+          <li>
+            <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/236036820&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+          </li>
+          <li>
+            <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/235453285&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+          </li>
+          <li>
+            <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/216830140&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+          </li>
         </ul>
       </div>
     </div>
     <footer>
     </footer>
   </body>
-  <script src="src/js/boilerplate.js"></script>
-  <script src="src/js/projects.js"></script>
+  <script src="//zro617.github.io/src/js/boilerplate.js"></script>
+  <script src="//zro617.github.io/src/js/projects.js"></script>
 </html>
