--- a/projects/purity.html
+++ b/projects/purity.html
@@ -197,7 +197,7 @@ div_finish = document.querySelector("div#finish"),
 div_finishalt = document.querySelector("div#finish-alt"),
 div_almost = document.querySelector("div#almost"),
 div_error = document.querySelector("div#error"),
-pre_log = document.querySelector("pre.log);
+pre_log = document.querySelector("pre.log");
 
 function _show(e) { e.style.display = "inline-block"; }
 function _hide(e) { e.style.display = "none"; }
