--- a/projects/index.html
+++ b/projects/index.html
@@ -22,12 +22,12 @@
         <p>And yeah, I've been busy with working on programs that aren't programmed in Scratch. I still am. Check these out:
         <ul id="other">
           <li>
-            <a href="scratch-ae-purifier.html">Purity</a>
+            <a href="purity.html">Purity</a>
             <span class="description">
               Helps remove your Scratch projects from "Add Everything" studios</span>
           </li>
           <li>
-            <a href="scratch-supporters.html">Census</a>
+            <a href="census.html">Census</a>
             <span class="description">
               Crude topic crawler for Scratch that generates a list of supporters, non-supporters, and the undecided. Useful on Suggestions.
             </span>
